@@ -2,9 +2,9 @@
 
 . /lib/partman/lib/auto-lvm.sh
 
-dev="$1"
+devs="$*"
 method="lvm"
 
-auto_lvm_prepare $dev $method || exit $?
+auto_lvm_prepare "$devs" $method || exit $?
 
 auto_lvm_perform || exit 1
