@@ -32,13 +32,88 @@ auto_lvm_create_partitions() {
 	create_partitions
 }
 
+VG_MAP_DIR=/var/lib/partman/auto_lvm_map
+DEFAULT_VG="@DEFAULT@"
+# Extract a map of which VGs to create on which PVs
+#
+# The map will be stored in $VG_MAP_DIR, one file for each VG;
+# containing one PV per line on which it should be created.
+#
+# As the name for the default VG will be asked in auto_lvm_perform(), the
+# temporary name is stored into $DEFAULT_VG.
+auto_lvm_create_vg_map() {
+	local pv_device line recipe_device vg_name vg_file pv_device pv_found
+
+	rm -rf $VG_MAP_DIR
+	mkdir -p $VG_MAP_DIR
+
+	# Extracting needed VGs
+	IFS="$NL"
+	for line in $lvmscheme; do
+		restore_ifs
+		vg_name=$(echo "$line" | sed -n -e 's!.*in_vg{ *\([^ }]*\) *}.*!\1!p')
+		[ "$vg_name" ] || vg_name=$DEFAULT_VG
+		touch $VG_MAP_DIR/$vg_name
+	done
+
+	# Extracting needed PVs and provided VGs
+	IFS="$NL"
+	for line in $pvscheme; do
+		restore_ifs
+		vg_name=$(echo "$line" | sed -n -e 's!.*vg_name{ *\([^ }]*\) *}.*!\1!p')
+		recipe_device=$(echo "$line" | sed -n -e 's!.*device{ *\([^ }]*\) *}.*!\1!p')
+		# If no VG has been specified, use default VG
+		[ "$vg_name" ] || vg_name="$DEFAULT_VG"
+		# If no PV has been specified, use main device
+		[ "$recipe_device" ] || recipe_device="$main_pv"
+
+		# Find the device for this PV from the list of known PVs
+		pv_found=
+		for pv_device in $pv_devices; do
+			if echo $pv_device | grep -q "$recipe_device[[:digit:]]*"; then
+				pv_found=1
+				break
+			fi
+		done
+		if [ "$pv_found" ]; then
+			echo $pv_device >> $VG_MAP_DIR/$vg_name
+		else
+			bail_out no_such_pv
+		fi
+	done
+	restore_ifs
+
+	# Add unused devices to default VG
+	for pv_device in $pv_devices; do
+		if ! grep -q "^$pv_device$" $VG_MAP_DIR/*; then
+			echo $pv_device >> $VG_MAP_DIR/$DEFAULT_VG
+		fi
+	done
+
+	# Ensure that all VG have at least one PV
+	for vg_file in $VG_MAP_DIR/*; do
+		if ! [ -s $vg_file ]; then
+			bail_out no_pv_in_vg
+		fi
+	done
+}
+
 auto_lvm_prepare() {
-	local main_device method size free_size normalscheme target
-	main_device=$1
+	local devs main_device extra_devices method size free_size normalscheme
+	local pvscheme lvmscheme target dev devdir main_pv physdev
+	devs="$1"
 	method=$2
 
-	[ -f $main_device/size ] || return 1
-	size=$(cat $main_device/size)
+	size=0
+	for dev in $devs; do
+		[ -f $dev/size ] || return 1
+		size=$(($size + $(cat $dev/size)))
+	done
+
+	set -- $devs
+	main_device=$1
+	shift
+	extra_devices="$*"
 
 	# Be sure the modules are loaded
 	modprobe dm-mod >/dev/null 2>&1 || true
@@ -48,21 +123,33 @@ auto_lvm_prepare() {
 		log-output -t update-dev update-dev
 	fi
 
-	target="$(humandev $(cat $main_device/device)) - $(cat $main_device/model)"
+	if [ "$extra_devices" ]; then
+		for dev in $devs; do
+			physdev=$(cat $dev/device)
+			target="${target:+$target, }${physdev#/dev/}"
+		done
+		db_metaget partman-auto-lvm/text/multiple_disks description
+		target=$(printf "$RET" "$target")
+	else
+		target="$(humandev $(cat $main_device/device)) - $(cat $main_device/model)"
+	fi
 	target="$target: $(longint2human $size)"
 	free_size=$(convert_to_megabytes $size)
 
 	choose_recipe lvm "$target" "$free_size" || return $?
 
-	auto_init_disks "$main_device" || return $?
-	get_last_free_partition_infos $main_device
+	auto_init_disks $devs || return $?
+	for dev in $devs; do
+		get_last_free_partition_infos $dev
 
-	# Check if partition is usable; use existing partman-auto template as we depend on it
-	if [ "$free_type" = unusable ]; then
-		db_input critical partman-auto/unusable_space || true
-		db_go || true
-		return 1
-	fi
+		# Check if partition is usable; use existing partman-auto
+		# template as we depend on it
+		if [ "$free_type" = unusable ]; then
+			db_input critical partman-auto/unusable_space || true
+			db_go || true
+			return 1
+		fi
+	done
 
 	decode_recipe $recipe lvm
 
@@ -92,6 +179,7 @@ auto_lvm_prepare() {
 
 	# Get the scheme of partitions that must be created outside LVM
 	normalscheme=$(echo "$scheme" | grep -v lvmok)
+	lvmscheme=$(echo "$scheme" | grep lvmok)
 
 	# Check if the scheme contains a boot partition; if not warn the user
 	# Except for powerpc/prep as that has the kernel in the prep partition
@@ -116,26 +204,57 @@ auto_lvm_prepare() {
 		;;
 	esac
 
-	scheme="$(add_envelope "$normalscheme")"
+	main_pv=$(cat $main_device/device)
+
+	# Partitions with method $method will hold Physical Volumes
+	pvscheme=$(echo "$normalscheme" | grep "method{ $method }")
+
+	# Start with partitions that are outside LVM and not PVs
+	scheme="$(echo "$normalscheme" | grep -v "method{ $method }")"
+	# Add partitions declared to hold PVs on the main device
+	scheme="$scheme$NL$(echo "$pvscheme" | grep "device{ $main_pv[[:digit:]]* }")"
+	# Add partitions declared to hold PVs without specifying a device
+	scheme="$scheme$NL$(echo "$pvscheme" | grep -v 'device{')"
+	# If we still don't have a partition to hold PV, add it
+	if ! echo "$scheme" | grep -q "method{ $method }"; then
+		scheme="$(add_envelope "$scheme")"
+	fi
 	auto_lvm_create_partitions $main_device
+
+	# Create partitions for PVs on extra devices
+	for dev in $extra_devices; do
+		physdev=$(cat $dev/device)
+		scheme="$(echo "$pvscheme" | grep "device{ $physdev[[:digit:]]* }")"
+		if [ -z "$scheme" ]; then
+			scheme="$(add_envelope "")"
+		fi
+		auto_lvm_create_partitions $dev
+	done
+
+	# Extract the mapping of which VG goes onto which PV
+	auto_lvm_create_vg_map
 
 	if ! confirm_changes partman-lvm; then
 		return 255
 	fi
 
-	# Write the partition tables
 	disable_swap
-	cd $main_device
-	open_dialog COMMIT
-	close_dialog
-
-	device_cleanup_partitions
+	# Write the partition tables
+	for dev in $devs; do
+		cd $dev
+		open_dialog COMMIT
+		close_dialog
+		device_cleanup_partitions
+	done
 	update_all
 }
 
 auto_lvm_perform() {
 	# Use hostname as default vg name (if available)
-	local defvgname pv
+	local defvgname pv vg_file vg_name
+	# $pv_devices will be overriden with content from $VG_MAP_DIR
+	local pv_devices
+
 	db_get partman-auto-lvm/new_vg_name
 	if [ -z "$RET" ]; then
 		if [ -s /etc/hostname ]; then
@@ -164,12 +283,19 @@ auto_lvm_perform() {
 		db_register partman-auto-lvm/new_vg_name_exists partman-auto-lvm/new_vg_name
 	done
 
-	if vg_create "$defvgname" $pv_devices; then
-		perform_recipe_by_lvm $defvgname $recipe
-	else
-		bail_out vg_create_error
-	fi
-	vg_lock_pvs "$defvgname" $pv_devices
+	# auto_lvm_create_vg_map() will have created one file for each VG
+	for vg_file in $VG_MAP_DIR/*; do
+		pv_devices="$(cat $vg_file)"
+		vg_name=$(basename $vg_file)
+		[ $vg_name = $DEFAULT_VG ] && vg_name="$defvgname"
+
+		if vg_create "$vg_name" $pv_devices; then
+			perform_recipe_by_lvm "$vg_name" $recipe
+		else
+			bail_out vg_create_error
+		fi
+		vg_lock_pvs "$vg_name" $pv_devices
+	done
 
 	# Default to accepting the autopartitioning
 	menudir_default_choice /lib/partman/choose_partition finish finish || true
