@@ -56,13 +56,15 @@ if [ "$method" ] && [ "$disks" ]; then
 		;;
 	    lvm)
 		search-path autopartition-lvm || exit 1
+		ids=""
 		for disk in $disks; do
 			id=$(dev_to_partman "$disk") || true
-			if [ "$id" ]; then
-				autopartition-lvm "$id"
-				exit 0
-			fi
+			ids="${ids:+$ids }$id"
 		done
+		if [ "$ids" ]; then
+			autopartition-lvm "$ids"
+			exit 0
+		fi
 		exit 1
 		;;
 	    crypto)
