@@ -15,6 +15,10 @@ partman-auto-lvm (29) UNRELEASED; urgency=low
     Depends: partman-auto (>= 81)
   * Add support for preseeding logical volume names directly using
     lv_name{ <name> } in the recipe.  (Closes: #484272)
+  * Add support for preseeding multiple disks, specifiying explicit partitions
+    to hold Physical Volumes, specifying Volume Group names and specifiying
+    in which VG Logical Volumes should be created.  (Closes: #385220, #462396)
+    Based on a patch by Grégory Oestreicher.
 
  -- Jérémy Bobbio <lunar@debian.org>  Sat, 16 Aug 2008 16:03:07 +0000
 
